s2/nbproject/private/Default-build.log
gcc -c server.c -o server.o
In file included from server.c:10:
./DataSet.c:61:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
server.c:52:18: error: too few arguments to function call, expected 2, have 1
        llegirUsuaris(&d);
        ~~~~~~~~~~~~~   ^
server.c:16:1: note: 'llegirUsuaris' declared here
int llegirUsuaris(struct DataSet *ds, char * domini){
^
1 warning and 1 error generated.
make: *** [server.o] Error 1
